Bug 280270 - Saved Locked Tabs each create extra tab on start
Summary: Saved Locked Tabs each create extra tab on start
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.0-beta1 "Migration"
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Lepper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-17 11:59 UTC by Nick
Modified: 2017-04-25 20:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nick 2011-08-17 11:59:43 UTC
Version:           2.4.0 (using KDE 4.7.0) 
OS:                Linux

If Locked Tabs are saved in a profile when set as the startup profile each tab creates extra blank tab

Reproducible: Always

Steps to Reproduce:
Create a profile with locked tabs
Set at startup profile
Restart krusader

Actual Results:  
extra tabs created

Expected Results:  
no extra tabs created
Comment 1 Joon Ro 2013-07-03 23:22:29 UTC
This still happens. KDE 4.10.3, Krusader 2.4.0-beta3 in openSUSE 12.3
Comment 2 Alex Bikadorov 2017-04-17 18:45:55 UTC
Still in 2.6.0
Comment 3 Alex Bikadorov 2017-04-25 20:11:18 UTC
Git commit 339d6090086535b21c3f8c99868627025fda9aae by Alexander Bikadorov.
Committed on 25/04/2017 at 19:05.
Pushed by abikadorov into branch 'master'.

Panel: Fixed additional tab when restoring a locked tab

FIXED: [ 280270 ] Saved Locked Tabs each create extra tab on start

M  +3    -3    krusader/Panel/listpanel.cpp

https://commits.kde.org/krusader/339d6090086535b21c3f8c99868627025fda9aae