Panel: Fixed additional tab when restoring a locked tab

FIXED: [ 280270 ] Saved Locked Tabs each create extra tab on start
BUG: 280270